--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,281 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
+/* :root
+{
+    --fondo2: #F0F0F7;
+    --fondo1: #FFFFFF;
+    --fondo-tab-bar: #212529;
+
+    --principal: #4692FE;
+    --degradado: linear-gradient(216deg, rgba(143,207,255,1) 0%, rgba(0,91,255,1) 100%);
+    --degradado2: linear-gradient(216deg, rgba(255,255,255,1) 0%, rgba(193,193,193,1) 100%);
+    --font: #cacaca;
+    --font2: #757575;
+    --font-tab-color: #dee2e6;
+    --rojo: #ff537b;
+    --verde: #ffcd6e;
+    /* --linea: #e5e4e9; 
+} 
+*/
+
+:root
+{
+    --fondo: #0e0e23;
+    --azul: #4255d4;
+    --font: #9b9ca7;
+    --font2: #e7e8ea;
+    --rojo: #de1c47;
+    --verde: #15a95b;
+    --gradient: radial-gradient(circle, #1a2049 0%, #13162f 100%);
+}
+
+*, *:before, *:after 
+{
+    box-sizing: inherit;
+}
+
+html 
+{
+    -webkit-font-smoothing: antialiased;
+}
+
 body 
 {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
+    color: var(--font2);
+    background-color: var(--fondo);
+}
+
+::-webkit-scrollbar 
+{
+    width: 10px;
+}
+ 
+::-webkit-scrollbar-track 
+{
+    border-radius: 10px;
+    background-color: transparent;
+}
+ 
+::-webkit-scrollbar-thumb 
+{
+     border-radius: 10px;
+    background-color: var(--font2);
+}
+
+.container-info-pregunta
+{
+    display: grid;
+    gap: 5px;
+    box-sizing: border-box;
+    padding-left: 25px;
+}
+
+.container-pregunta
+{
+    display: grid;
+    gap: 15px;
+}
+
+.container-login, .container-crear-cuestionario
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container-crear-cuestionario
+{
+    height: calc(100vh - 70px);
+}
+
+.container-titulo-form
+{
+    display: flex;
+    justify-content: center;
+}
+
+.container-titulo-form h2
+{
+    margin-bottom: 0;
+}
+
+.container-textbox
+{
+    display: grid;
+    gap: 15px;
+}
+
+.container-btn
+{
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    box-sizing: border-box;
+}
+
+.form-general
+{
+    box-sizing: border-box;
+    border-radius: 6px;
+    background: var(--gradient);
+    padding: 40px;
+    display: grid;
+    gap: 50px;
+    width: 520px;
+}
+
+.form-general h1
+{
+    margin-bottom: 0;
+}
+
+.form-group
+{ 
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin-top: .5rem;
+    width: 100%;
+}
+
+.btn-general
+{
+    width: 100%;
+    height: 40px;
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--azul);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    color: var(--font2);
+    box-shadow: 0 8px 24px 0 rgb(66 85 212 / 30%);
+}
+
+.btn-secundario
+{
+    background-color: transparent;
+    border: 2px solid var(--azul);
+}
+
+.form-style
+{
+    box-sizing: border-box;
+    padding: 13px 20px;
+    padding-left: 55px;
+    width: 100%;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    outline: none;
+    color: var(--font);
+    background-color: var(--fondo);
+    border: none;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+    box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+
+.input-icon 
+{
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 48px;
+    font-size: 24px;
+    line-height: 48px;
+    text-align: left;
+    color: var(--font2);
+}
+
+.link-general
+{
+    width: 100%;
+}
+
+a
+{
+    text-decoration: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  
+{
+    -webkit-box-shadow: 0 0 0 30px #0c0c2d inset;
+    -webkit-text-fill-color: white;
+}
+
+.form-style:focus,
+.form-style:active 
+{
+    border: none;
+    outline: none;
+    box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+
+.form-group input:-ms-input-placeholder  
+{
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input::-moz-placeholder  
+{
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input:-moz-placeholder  
+{
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input::-webkit-input-placeholder  
+{
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input:focus:-ms-input-placeholder  
+{
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input:focus::-moz-placeholder  
+{
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input:focus:-moz-placeholder  
+{
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
+}
+
+.form-group input:focus::-webkit-input-placeholder  
+{
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+      transition: all 200ms linear;
 }
