--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,7 +67,7 @@ body
 .container-info-pregunta
 {
     display: grid;
-    gap: 5px;
+    gap: 15px;
     box-sizing: border-box;
     padding-left: 25px;
 }
@@ -125,6 +125,8 @@ body
     display: grid;
     gap: 50px;
     width: 520px;
+    max-height: calc(100vh - 120px);
+    overflow: auto;
 }
 
 .form-general h1
@@ -138,7 +140,6 @@ body
     display: block;
     margin: 0;
     padding: 0;
-    margin-top: .5rem;
     width: 100%;
 }
 
@@ -278,4 +279,59 @@ input:-webkit-autofill:active
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
+}
+
+.loader,
+.loader:after 
+{
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+
+.loader 
+{
+    margin: 60px auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(231,232,234, 0.2);
+    border-right: 1.1em solid rgba(231,232,234, 0.2);
+    border-bottom: 1.1em solid rgba(231,232,234, 0.2);
+    border-left: 1.1em solid #e7e8ea;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+
+@-webkit-keyframes load8 
+{
+    0% 
+    {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% 
+    {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load8 
+{
+    0% 
+    {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% 
+    {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
