--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,6 +64,15 @@ body
     background-color: var(--font2);
 }
 
+.container-mis-cuestionarios
+{
+    display: flex;
+    padding: 4%;
+    gap: 20px;
+    box-sizing: border-box;
+    height: calc(100vh - 70px);
+}
+
 .container-info-pregunta
 {
     display: grid;
@@ -88,7 +97,8 @@ body
 
 .container-crear-cuestionario
 {
-    height: calc(100vh - 70px);
+    width: 100%;
+    height: 100%;
 }
 
 .container-titulo-form
