--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -87,7 +87,7 @@ body
     gap: 15px;
 }
 
-.container-login, .container-crear-cuestionario
+.container-login, .container-crear-cuestionario, .container-cuestionario
 {
     display: flex;
     justify-content: center;
@@ -99,6 +99,11 @@ body
 {
     width: 100%;
     height: 100%;
+}
+
+.container-cuestionario
+{
+    height: calc(100vh - 70px);
 }
 
 .container-titulo-form
@@ -306,6 +311,13 @@ input:-webkit-autofill:active
     opacity: 0;
     -webkit-transition: all 200ms linear;
       transition: all 200ms linear;
+}
+
+.op-respuesta-correcta
+{
+    background-color: var(--verde);
+    border-radius: 3px;
+    color: var(--fondo)
 }
 
 .loader,
